--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/is-prop-valid": "latest",
+    "@hello-pangea/dnd": "latest",
     "@hookform/resolvers": "latest",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-context-menu": "^2.2.4",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-hover-card": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
@@ -28,6 +32,8 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "^3.6.0",
+    "framer-motion": "latest",
+    "immer": "latest",
     "lucide-react": "^0.454.0",
     "next": "15.1.0",
     "next-themes": "latest",
@@ -38,14 +44,10 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "use-sync-external-store": "latest",
     "vaul": "^0.9.6",
     "zod": "latest",
-    "immer": "latest",
-    "use-sync-external-store": "latest",
-    "@emotion/is-prop-valid": "latest",
-    "zustand": "latest",
-    "framer-motion": "latest",
-    "@hello-pangea/dnd": "latest"
+    "zustand": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
